# anki_flashcard_generator

./: .gitignore  anki.py  main.py  pyproject.toml
api/: anki_connect.py  main.py
data_sources/: kindle.py
models/: Deck.py  Model.py  Note.py  __init__.py
services/: definition_api.py  kindle.py
